Removed social login temporarily. Restructured firebase to pull data for each individual user.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,11 +9,11 @@
             <a routerLink="/signup" class="alc">Don't have an account?</a>
             <button type="submit" [disabled]="!formData.valid" class="basic-btn">Log in</button>
         </form>
-        <strong>Or you can login with one of the following social network platforms</strong>
+        <!--<strong>Or you can login with one of the following social network platforms</strong>
         <div class="socials">
             <a class="fb" (click)="loginFb()" href="javascript:void(0)" title=""><i class="fa fa-facebook"></i></a>
-            <!--<a class="twitter" (click)="loginTwitter()" href="#" title=""><i class="fa fa-twitter"></i></a>-->
+            <a class="twitter" (click)="loginTwitter()" href="#" title=""><i class="fa fa-twitter"></i></a>
             <a class="google-plus" (click)="loginGoogle()" href="javascript:void(0)" title=""><i class="fa fa-google-plus"></i></a>
-        </div>
+        </div>-->
     </div>
 </div>
